# xkcd_1608_mapper

./: .gitignore  README.md  __main__.py  pull_images.py  pyproject.toml  requirements.txt  setup.py  stitch_images.py  xkcd_map.py  xkcd_stitch_images.py
comic_2712/: __main__.py  config.json  pull_images.py  stitch_images.py
xkcd_1608/: pull_images.py  stitch_images.py
xkcd_2712/: comic.js  coordinator.py  fun_things  pull_images.py  stitch_images.py
xkcd_mapper/: __main__.py
xkcd_mapper/xkcd_1608/: coordinator.py  pull_images.py  stitch_images.py
xkcd_mapper/xkcd_2712/: background.py  comic.js  coordinator.py  pull_images.py  stitch_images.py
